# src/model/api/tuner/ITunerApiModel.ts
@@ -1,0 +1,5 @@
+import * as apid from '../../../../api';
+
+export default interface ITunerApiModel {
+    getAll(): Promise<apid.TunerStatusItem[]>;
+}
